WMG112519/force-app/main/default/objects/Task_Updates__c/Task_Updates__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Task Update</label>
</CustomObject>