WMG112519/force-app/main/default/objects/Task_Updates__c/fields/Child_Field__c.field-meta.xml
<CustomField>
    <fullName>Child_Field__c</fullName>
    <label>Child Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>