WMG112519/force-app/main/default/objects/Task_Updates__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>