WMG112519/force-app/main/default/objects/Task_Updates__c/fields/Task_Field__c.field-meta.xml
<CustomField>
    <fullName>Task_Field__c</fullName>
    <label>Task Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>