WMG112519/force-app/main/default/objects/Task_Updates__c/fields/Task_Value__c.field-meta.xml
<CustomField>
    <fullName>Task_Value__c</fullName>
    <label>Task Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>